--- a/book-network-api/docker-compose.yaml
+++ b/book-network-api/docker-compose.yaml
@@ -1,3 +1,33 @@
+#services:
+#  postgres:
+#    container_name: postgres-sql-bsn
+#    image: postgres
+#    environment:
+#      POSTGRES_USER: username
+#      POSTGRES_PASSWORD: password
+#      PGDATA: /var/lib/postgresql/data
+#      POSTGRES_DB: book_social_network
+#    volumes:
+#      - postgres:/data/postgres
+#    ports:
+#      - 5432:5432
+#    networks:
+#      - spring-demo
+#    restart: unless-stopped
+#  mail-dev:
+#    container_name: mail-dev-bsn
+#    image: maildev/maildev
+#    ports:
+#      - 1080:1080
+#      - 1025:1025
+#networks:
+#  spring-demo:
+#    driver: bridge
+#
+#volumes:
+#  postgres:
+#    driver: local
+
 services:
   postgres:
     container_name: postgres-sql-bsn
@@ -20,6 +50,18 @@ services:
     ports:
       - 1080:1080
       - 1025:1025
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - 5050:80
+    depends_on:
+      - postgres
+    networks:
+      - spring-demo
+    restart: unless-stopped
 networks:
   spring-demo:
     driver: bridge
